# shared_reference

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.backup  LICENSE
.github/workflows/: cmake-ci.yml
cmake/: FindApalache.cmake  FindLLVMCov.cmake  FindTLC.cmake
docs/: ref_owner_concept.md  ref_owner_proposal.md
include/zoox/: memory_w_ref_owner.hpp  memory_w_unique_reference.h
spec/: .gitignore  README.md  ShareablePtr.cfg  ShareablePtr.tla  TLA_VERIFICATION_GUIDE.md  UniqueReference.cfg  UniqueReference.tla
src/: main.cpp
test/: hello_test.cpp  ref_owner_test.cpp  ref_owner_tla_test.cpp
